<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Anywall</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_wall">WallActivity</string>
    <string name="title_activity_register">Register</string>
    <string name="menu_logout">Logout</string>
    <string name="action_register"><b>Register</b></string>
    <string name="menu_post">Post</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login_or_register">LoginOrRegisterActivity</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="menu_refresh">Refresh</string>
    <string name="tagline">The world is your wall</string>
    <string name="map_pin_icon">Map Pin Icon</string>

</resources>