<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_refresh"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_refresh"
        android:title="@string/menu_refresh" />
    <item
        android:id="@+id/menu_post"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_post"
        android:title="@string/menu_post" />
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_logout"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"/>
    

</menu>